adding lock unlock features