@@ -1,6 +1,7 @@
 package com.bootcampproject.bootcamp_project.service;
 
 import com.bootcampproject.bootcamp_project.dto.CustomerResponseDTO;
+import com.bootcampproject.bootcamp_project.dto.SellerResponseDTO;
 import com.bootcampproject.bootcamp_project.entity.Customer;
 import com.bootcampproject.bootcamp_project.entity.Seller;
 import com.bootcampproject.bootcamp_project.entity.User;
@@ -38,11 +39,11 @@ public class AdminService {
 
 
     //--------------------------------PAGINATION STARTS-------------------------------------------------------------------------------------
-    public List<Seller> findListOfSellers(Integer pageSize, Integer pageOffset, String sortBy, String email) {
+    public List<SellerResponseDTO> findListOfSellers(Integer pageSize, Integer pageOffset, String sortBy, String email) {
         if (!Objects.isNull(email)) {
             Optional<User> sellerOption = userRepository.findByEmail(email);
             if (sellerOption.isPresent())
-                return Collections.singletonList(sellerOption.get().getSeller()); //return a list containing single seller object found by email.
+                return Collections.singletonList(SellerResponseDTO.mapper(sellerOption.get().getSeller())); //return a list containing single seller object found by email.
             return null;
 
         }
@@ -50,14 +51,18 @@ public class AdminService {
         Integer pageNumber = 0;
         if (Objects.isNull(pageSize))
             pageSize = 10;
-        if (Objects.isNull(pageOffset) && pageOffset != 0) // starting k records kaha se dikhenege ye pageoffset se pta chalata h.. agar page offset 10 dia h to starting k 10 record dikhai ni denge.. starting k 10 records 0-9 honge.. indexing 0 se start hoti h
+        if (!Objects.isNull(pageOffset) && pageOffset != 0) // starting k records kaha se dikhenege ye pageoffset se pta chalata h.. agar page offset 10 dia h to starting k 10 record dikhai ni denge.. starting k 10 records 0-9 honge.. indexing 0 se start hoti h
             pageNumber = pageOffset / pageSize; // kitne items dikhenge ye page size define krta h
         if (Objects.isNull(sortBy))
             sortBy = "id";
         Pageable pageable = PageRequest.of(pageNumber, pageSize, Sort.by(Sort.Order.asc(sortBy)));
-        return sellerRepository.findAll(pageable).toList();
+        List<Seller> sellers = sellerRepository.findAll(pageable).toList();
+        List<SellerResponseDTO> sellerResponseDTOS = sellers.stream().map(SellerResponseDTO::mapper).collect(Collectors.toList());
+        return sellerResponseDTOS;
     }
 
+    //---------------------------------------------------------------------------------------------------------------------------------------------------------
+    // find list of customer
     public List<CustomerResponseDTO> findListOfCustomer(Integer pageSize, Integer pageOffSet, String sortBy, String email) {
         if (!Objects.isNull(email)) {
             Optional<User> customerOption = userRepository.findByEmail(email);
@@ -92,9 +97,11 @@ public class AdminService {
         emailService.sendEmailAsync(email, "Hi there!", body);
     }
 
+
     //----------------------------------Customer active and deactivate methods start--------------------------------------------------------
+    //  --------------activate customer by admin----------------------------
     @Transactional
-    public ResponseEntity<?> activateCustomerAccountByAdmin(Long id) {
+    public ResponseEntity<?> activateDeactivateCustomerAccountByAdmin(Long id, boolean isActive) {
         Optional<Customer> customerOptional = customerRepository.findById(id);
         if (!customerOptional.isPresent()) {
             return new ResponseEntity<>("Customer not found ,", HttpStatus.NOT_FOUND);
@@ -103,31 +110,45 @@ public class AdminService {
 
 
         // Condition to check if user is deactivated
-        if (!customer.getUser().getIsActive()) {
-            customer.getUser().setIsActive(true);
-            customerRepository.save(customer);
-            sendEmail(customer.getUser().getEmail(), "Congratulations! Your account has been activated!");
-            return new ResponseEntity<>("Customer activated successfully!", HttpStatus.OK);
+        if (isActive) {
+            if (customer.getUser().getIsActive())
+                return new ResponseEntity<>("Customer is already activated!", HttpStatus.OK);
+            else {
+                customer.getUser().setIsActive(isActive);
+                customerRepository.save(customer);
+                sendEmail(customer.getUser().getEmail(), "Congratulations! Your account has been activated!");
+                return new ResponseEntity<>("Customer activated successfully!", HttpStatus.OK);
+            }
+        } else {
+            if (!customer.getUser().getIsActive())
+                return new ResponseEntity<>("Customer is already deactivated!", HttpStatus.OK);
+            else {
+                customer.getUser().setIsActive(isActive);
+                customerRepository.save(customer);
+                sendEmail(customer.getUser().getEmail(), "Your account has been deactivated, please contact admin : admin@tothenew.com!" );
+                return new ResponseEntity<>("Customer account deactivated Successfully", HttpStatus.OK);
+            }
         }
-        return new ResponseEntity<>("Customer is already activated!", HttpStatus.OK);
     }
 
-    public String deactivateCustomerAccountByAdmin(Long id) {
-        Optional<Customer> customerOptional = customerRepository.findById(id);
-        if (!customerOptional.isPresent()) {
-            return "No customer exists with this user id!";
-        }
-        Customer customer = customerOptional.get();
+    //--------------------------deactivate customer by admin------------------------------------------------
 
-
-        if (customer.getUser().getIsActive()) {
-            customer.getUser().setIsActive(false);
-            customerRepository.save(customer);
-            sendEmail(customer.getUser().getEmail(), "Your account has been deactivated, please contact admin!");
-            return "Customer account deactivated Successfully";
-        }
-        return "Customer is already deactivated!";
-    }
+//    public ResponseEntity<?> deactivateCustomerAccountByAdmin(Long id) {
+//        Optional<Customer> customerOptional = customerRepository.findById(id);
+//        if (!customerOptional.isPresent()) {
+//            return new ResponseEntity<>("No customer exists with this user id! ,", HttpStatus.NOT_FOUND);
+//        }
+//        Customer customer = customerOptional.get();
+//
+//
+//        if (customer.getUser().getIsActive()) {
+//            customer.getUser().setIsActive(false);
+//            customerRepository.save(customer);
+//            sendEmail(customer.getUser().getEmail(), "Your account has been deactivated, please contact admin!");
+//            return new ResponseEntity<>("Customer account deactivated Successfully", HttpStatus.OK);
+//        }
+//        return new ResponseEntity<>("Customer is already deactivated!", HttpStatus.OK);
+//    }
 
     //--------------------------------------- Customer active and deactivate methods end------------------------------------------------------
 
@@ -135,39 +156,120 @@ public class AdminService {
     //---------------------------------------Seller active and deactivation methods start-----------------------------------------------------
 
     @Transactional
-    public String activateSellerAccountByAdmin(Long id) {
+    public ResponseEntity<?> activateDeactivateSellerAccountByAdmin(Long id, boolean isActive) {
         Optional<Seller> sellerOptional = sellerRepository.findById(id);
 
         if (!sellerOptional.isPresent()) {
-            return "No seller exists with this user id!";
+            return new ResponseEntity<>("No seller exists with this user id!", HttpStatus.NOT_FOUND);
         }
         Seller seller = sellerOptional.get();
 
         // Condition to check if user is deactivated
-        if (seller.getUser().getIsActive() == null || seller.getUser().getIsActive() == false) {
-            seller.getUser().setIsActive(true);
-            sellerRepository.save(seller);
-            sendEmail(seller.getUser().getEmail(), "Congratulations! Your account has been activated!");
-            return "Seller activated Successfully";
+        if (isActive) {
+            if (seller.getUser().getIsActive() == null || seller.getUser().getIsActive()) {
+                return new ResponseEntity<>("Seller is already activated!", HttpStatus.OK);
+            } else {
+                seller.getUser().setIsActive(isActive);
+                sellerRepository.save(seller);
+                sendEmail(seller.getUser().getEmail(), "Congratulations! Your account has been activated!");
+                return new ResponseEntity<>("Seller activated Successfully", HttpStatus.OK);
+            }
+
+        } else {
+            if (!seller.getUser().getIsActive()) {
+
+                return new ResponseEntity<>("Seller is already deactivated!", HttpStatus.OK);
+            } else {
+                seller.getUser().setIsActive(false);
+                sellerRepository.save(seller);
+                sendEmail(seller.getUser().getEmail(), "Your account has been deactivated, please contact admin!");
+                return new ResponseEntity<>("Seller account deactivated Successfully", HttpStatus.OK);
+            }
+
+
         }
-        return "Seller is already activated!";
     }
 
-    public String deactivateSellerAccountByAdmin(Long id) {
+    // -----------------------------------to unlock customer ------------------------------------------------------------------------------------------
+
+    public ResponseEntity<?> isCustomerLocked(Long id, boolean isLocked) {
+        Optional<Customer> customerOptional = customerRepository.findById(id);
+        if (!customerOptional.isPresent()) {
+            return new ResponseEntity<>("Customer not found ,", HttpStatus.NOT_FOUND);
+        }
+        Customer customer = customerOptional.get();
+        if (isLocked) {
+            if (!customer.getUser().getIsLocked()) {
+                return new ResponseEntity<>("Customer's account is already unlocked!", HttpStatus.OK);
+            } else {
+                customer.getUser().setIsLocked(isLocked);
+                customerRepository.save(customer);
+                sendEmail(customer.getUser().getEmail(), "Congratulations! Your account has been unlocked !");
+                return new ResponseEntity<>("Customer's account unlocked successfully!", HttpStatus.OK);
+            }
+
+        } else {
+            if (!customer.getUser().getIsLocked())
+                return new ResponseEntity<>("Customer is already locked!", HttpStatus.OK);
+            else {
+                customer.getUser().setIsLocked(isLocked);
+                customerRepository.save(customer);
+                sendEmail(customer.getUser().getEmail(), "Your account has been locked, please contact admin!");
+                return new ResponseEntity<>("Customer account locked Successfully", HttpStatus.OK);
+            }
+        }
+
+
+    }
+
+    //------------------------------------to unlock seller -----------------------------------------------------------------------------------------------
+
+    public ResponseEntity<?> isSellerLocked(Long id, boolean isLocked) {
         Optional<Seller> sellerOptional = sellerRepository.findById(id);
+
         if (!sellerOptional.isPresent()) {
-            return "No seller exists with this user id!";
+            return new ResponseEntity<>("No seller exists with this user id!", HttpStatus.NOT_FOUND);
         }
         Seller seller = sellerOptional.get();
 
-        if (seller.getUser().getIsActive()) {
-            seller.getUser().setIsActive(false);
-            sellerRepository.save(seller);
-            sendEmail(seller.getUser().getEmail(), "Your account has been deactivated, please contact admin!");
-            return "Seller account deactivated Successfully";
+        if (isLocked) {
+            if (seller.getUser().getIsLocked() == null || seller.getUser().getIsLocked() == false) {
+                return new ResponseEntity<>("Seller's account is already unlocked!", HttpStatus.OK);
+            } else {
+                seller.getUser().setIsLocked(isLocked);
+                sellerRepository.save(seller);
+                sendEmail(seller.getUser().getEmail(), "Congratulations! Your account has been unlocked!");
+                return new ResponseEntity<>("Seller's account has been unlocked Successfully", HttpStatus.OK);
+            }
         }
-        return "Seller is already deactivated!";
+        else {
+            if (!seller.getUser().getIsLocked())
+                return new ResponseEntity<>("Seller is already locked!", HttpStatus.OK);
+            else {
+                seller.getUser().setIsLocked(isLocked);
+                sellerRepository.save(seller);
+                sendEmail(seller.getUser().getEmail(), "Your account has been locked, please contact admin!");
+                return new ResponseEntity<>("Seller account locked Successfully", HttpStatus.OK);
+            }
+        }
+
+
     }
+//    public String deactivateSellerAccountByAdmin(Long id) {
+//        Optional<Seller> sellerOptional = sellerRepository.findById(id);
+//        if (!sellerOptional.isPresent()) {
+//            return "No seller exists with this user id!";
+//        }
+//        Seller seller = sellerOptional.get();
+//
+//        if (seller.getUser().getIsActive()) {
+//            seller.getUser().setIsActive(false);
+//            sellerRepository.save(seller);
+//            sendEmail(seller.getUser().getEmail(), "Your account has been deactivated, please contact admin!");
+//            return "Seller account deactivated Successfully";
+//        }
+//        return "Seller is already deactivated!";
+//    }
 
 
 }
